# amd64emu

./: .gitignore  Cargo.toml  README.md  assemble.sh  test.c  test.rs  test_flags  test_flags.asm  testflags  testflags.asm
.github/workflows/: Lints.yml  rust.yml
src/: emu.rs  lib.rs  mmu.rs  primitive.rs  symbol_table.rs
tests/: JB_test  JB_test.asm  JLE_test  JLE_test.asm  a.out  hello_asm  hello_asm.asm  test.c
